--- a/src/lab/images/simulation/rectangular_notch/rvnotch.css
+++ b/src/lab/images/simulation/rectangular_notch/rvnotch.css
@@ -1,98 +1,206 @@
 html
 {
-	-moz-user-select     : none;
-	-khtml-user-select   : none;
-	-webkit-user-select  : none;
-	-o-user-select       : none;
-	user-select          : none;
+    -moz-user-select     : none;
+    -khtml-user-select   : none;
+    -webkit-user-select  : none;
+    -o-user-select       : none;
+    user-select          : none;
 }
 
 #simscreen
 {
-position: relative;
-left:0px;
-top:0px;
-height: 600px; 
-width:800px;
-border:solid 1px;
-}
-
-#copyright{
-position: absolute;
-left:50px;
-top: 580px;
-font-family: verdana; 
-font-size:12px
+	position: relative;
+	left:0px;
+	top:0px;
+	height: 600px; 
+	width:800px;
+	border:solid 1px;
+	font-family: verdana;
+	font-size:14px;
 }
 
 #title{
-position:relative;
-left: 0px;
-top: 0px;
-height:40px;
-font-size: 24px;
-text-align:center;
-background-color: black;
-font-family: verdana;
-color: White;
-text-transform: uppercase; 
+	position:relative;
+	left: 0px;
+	top: 0px;
+	height:40px;
+	font-size: 22px;
+	text-align:center;
+	background-color: black;
+	font-family: verdana;
+	color: White;
+	text-transform: uppercase; 
 }
 
-#title h3{
-padding-top:2px;
-margin:0px;}
+#title h3
+{
+	padding-top:2px;
+	margin:0px;
+}	
 
 .simsubscreen
 {
-position:absolute;
-left: 50px;
-top: 50px;
-height:530px;
-width:745px;
-
+	position:absolute;
+	left:50px;
+	top:50px;
+	height:530px;
+	width:745px;
 }
 
 .incanvas
 {
-margin:5px 0 0 5px;
-padding:0;
-}
-#nextButton{
-    position: absolute;
-    left: 750px;
-    top: 530px;
-cursor:pointer;
-}
-#nextButton1{
-    position: absolute;
-    left: 750px;
-    top: 530px;
-cursor:pointer;
+	margin:5px 0 0 5px;
+	padding:0;
 }
 
-#prevButton{
-    position: absolute;
-    left: 0px;
-    top: 532px;
-cursor:pointer;
+#nextButton
+{
+	position:absolute;
+	left:750px;
+	top:530px;
+	cursor:pointer;
 }
-
-
-.steptext{
-display:inline;}
-
-.steptext-6{
-display:inline;}
-
-.steptext-2{display:inline;}
 
 .circlebg
 {
-border-radius:100%;
-font-size:25px;
-color:#fff;
-text-align:center;
-background:#000
+	border-radius:100%;
+	font-size:25px;
+	color:#fff;
+	text-align:center;
+	background:#000
+}
+
+.steptext
+{
+	display:inline;
+	font-size:14px;
+}
+
+#copyright{
+	position: absolute;
+	left:60px;
+	top: 580px;
+	font-size:12px
+}
+
+/* -------------------------------------- dynamic check button and result ---------------------------------- */
+.inputStyle{
+	border:none;
+	border-bottom: 1px solid;
+	width:55px;
+	font-family:verdana;
+	font-size:14px;
+	text-align:center;
+}
+.resultStyle{
+	border:none;
+	border-bottom-style:double;
+	width:55px;
+	font-family:verdana;
+	font-size:14px;
+	text-align:center;
+	
+}
+
+
+.tooltip {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .tooltip .tooltiptext {
+    visibility: hidden;
+    width: 200px;
+    background-color: black;
+    color: #fff;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 14px;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 5px;
+    position: absolute;
+    z-index: 1;
+    bottom: 80%;
+    left: 50%;
+    margin-left: -60px;
+  }
+  
+  .tooltip .tooltiptext::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: black transparent transparent transparent;
+  }
+  
+  .tooltip:hover .tooltiptext {
+    visibility: visible;
+  }
+
+  .tooltipObservation {
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px dotted black;
+    font-family: verdana;
+      font-size:14px;
+  }
+  
+  .tooltipObservation .tooltipObservationText {
+      font-family: verdana;
+      font-size:14px;
+    visibility: hidden;
+    width: 500px;
+    background-color: black;
+    color: #fff;
+    border-radius: 6px;
+    padding: 10px 10px 10px 10px;
+  
+    /* Position the tooltip */
+    position: absolute;
+    z-index: 100;
+  }
+  
+  .tooltipObservation:hover .tooltipObservationText {
+    visibility: visible;
+  }
+
+
+/* <!-- For description --> */
+.popup
+{
+	border-radius:5px;
+	background-color:black;
+	color:white;
+	padding:5px;
+}
+
+.ttip {
+  position: relative;
+  display: inline-block;
+  border-bottom: 1px dotted black;
+}
+
+.ttip .ttiptext
+{ 
+  left : 20px;
+  visibility: hidden;
+  width: 320px;
+  background-color: black;
+  color: #fff;
+  text-align: left;
+  border-radius: 6px;
+  padding: 10px 10px 10px 10px;
+
+  /* Position the tooltip */
+  position: absolute;
+  z-index: 100;
+}
+
+.ttip:hover .ttiptext {
+  visibility: visible;
 }
 
 /* -------------------------------------- water ---------------------------------------- */
