--- a/src/lab/images/simulation/venturi/css/venturi.css
+++ b/src/lab/images/simulation/venturi/css/venturi.css
@@ -7,52 +7,6 @@ html
 	user-select          : none;
 }
 
-select:disabled{
-	color:black;
-}
-
-#hand3
-{
-	-webkit-transform:rotate(-5deg);
-	 transform:rotate(-5deg);
-	 text-decoration: blink;
-}
-
-.close2
-{
-	-webkit-transform:rotate(360deg);
-	 transform:rotate(360eg);
-	 text-decoration: blink;
-}
-
-
-@keyframes pipe{
-from {left: 220px; top:20px;}
-to {left: 220px; top:150px;}
-
-}
-
-input[type=text]:focus {
-    padding: 40px;
-    margin: 18px 0;
-    display: inline-block;
-    border: 1px solid black;
-    border-radius: 2px;
-    text-align:center;
-    background-color:#D3D3D3
-}
-#table
-{
-	padding:0px;
-	border: 1px solid black;
-	 border-collapse: collapse;
-    width: 60%;
-}
-th,td
-{
-	height:30px;
-}
-
 #simscreen
 {
 position: relative;
@@ -63,23 +17,6 @@ width:800px;
 border:solid 1px;
 }
 
-.tmr
-{
-position: absolute;
-left:30px;
-top: 60px;
-height: 100px; 
-width:190px;
-border:solid 1px;
-}
-
-#copyright{
-position: absolute;
-left:50px;
-top: 580px;
-font-family: verdana; 
-font-size:12px
-}
 
 #title{
 position:relative;
@@ -156,7 +93,7 @@ font-size:14px;
 font-family: verdana;
 }
 
-.steptext-6
+/* .steptext-6
 {
 display:inline;
 font-family: verdana;
@@ -169,7 +106,7 @@ font-size:14px;
 	font-family: verdana;
 	font-size:14px;
 
-}
+} */
 
 .circlebg
 {
@@ -180,6 +117,112 @@ text-align:center;
 background:#000
 }
 
+
+#copyright{
+    position: absolute;
+    left:50px;
+    top: 580px;
+    font-family: verdana; 
+    font-size:12px
+    }
+
+.close2
+{
+	-webkit-transform:rotate(360deg);
+	 transform:rotate(360eg);
+	 text-decoration: blink;
+}
+
+
+select:disabled{
+	color:black;
+}
+
+/* 
+
+#table
+{
+	padding:0px;
+	border: 1px solid black;
+	 border-collapse: collapse;
+    width: 60%;
+}
+th,td
+{
+	height:30px;
+} 
+
+.tmr
+{
+position: absolute;
+left:30px;
+top: 60px;
+height: 100px; 
+width:190px;
+border:solid 1px;
+}
+
+*/
+
+
+.inputStyle{
+	border:none;
+	border-bottom: 1px solid;
+	width:55px;
+	font-family:verdana;
+	font-size:14px;
+	text-align:center;
+}
+.resultStyle{
+	border:none;
+	border-bottom-style:double;
+	width:55px;
+	font-family:verdana;
+	font-size:14px;
+	text-align:center;
+	
+}
+
+
+.tooltip {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .tooltip .tooltiptext {
+    visibility: hidden;
+    background-color: black;
+    color: #fff;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 14px;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px;
+    position: absolute;
+    z-index: 1;
+    bottom: 80%;
+    left: 50%;
+    margin-left: -60px;
+  }
+  
+  .tooltip .tooltiptext::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: black transparent transparent transparent;
+  }
+  
+  .tooltip:hover .tooltiptext {
+    visibility: visible;
+  }
+
+  input[type=text]:focus{
+    outline:none;
+}
 /* -------------------------------------- water ---------------------------------------- */
 /* Chrome, Safari, Opera */
 @-webkit-keyframes water-4 {
@@ -362,7 +405,7 @@ background:#000
     100% {transform: translate(0, 8px);}
 }
 
-//345
+
 
 @-webkit-keyframes mymv-1 {
 0% {left: 50px; top:325px;}
@@ -537,6 +580,20 @@ to {left: 415px; top: 273px;}
 
 
 /* ---------------------------------pipe valve -------------*/
+
+@keyframes pipe{
+    from {left: 220px; top:20px;}
+    to {left: 220px; top:150px;}
+    
+ }
+
+ 
+ @-webkit-keyframes pipe{
+    from {left: 220px; top:20px;}
+    to {left: 220px; top:150px;}
+    
+    }
+
 @keyframes pipes-1{
 	0%{transform:rotate(-20deg);}
 	100%{transform:rotate(30deg);}
@@ -578,5 +635,5 @@ to {left: 415px; top: 273px;}
 	
 }
 	
-}
+
 
